# poke-dojo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_solo.py  fly.toml  play_games.py  pyproject.toml  take_profile_screenshots.py  take_screenshots.py  take_screenshots_remaining.py  take_ui_screenshots.py
app/: database.py  main.py  models.py
app/routers/: auth.py  battle_arena.py  challenge.py  daily_challenge.py  game.py  journey.py  pokedex.py  scores.py  sprites.py
app/services/: data_loader.py  level_system.py  match_state.py  pokemon_cache.py  pokemon_data.py  shadow_model.py  sprite_proxy.py  string_match.py  supabase_client.py  username_filter.py  xgboost_model.py
app/templates/: account.html  arena_leaderboard.html  auth_callback.html  auth_claim.html  auth_native.html  auth_reset_password.html  base.html  battle_arena.html  contact.html  daily_challenge.html  faq.html  game.html  index.html  loading.html  pokedex.html  profile.html  scores.html  trainer_journey.html
data/: backfill_height_weight.py  fetch_data.py
static/css/: style.css
static/js/: game1.js  game2.js
