[project]
name = "poke-dojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "better-profanity>=0.7.0",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
